src/parser/AslParser.java
// $ANTLR 3.4 /home2/users/alumnes/1182979/dades/musicote/CL-Musica-FIB-master/src/parser/Asl.g 2017-06-02 20:31:00

package parser;
import interp.AslTree;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


/**
 * Copyright (c) 2011, Jordi Cortadella
 * All rights reserved.
 *
 * Redistribution and use in source and binary forms, with or without
 * modification, are permitted provided that the following conditions are met:
 *    * Redistributions of source code must retain the above copyright
 *      notice, this list of conditions and the following disclaimer.
 *    * Redistributions in binary form must reproduce the above copyright
 *      notice, this list of conditions and the following disclaimer in the
 *      documentation and/or other materials provided with the distribution.
 *    * Neither the name of the <organization> nor the
 *      names of its contributors may be used to endorse or promote products
 *      derived from this software without specific prior written permission.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
 * ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
 * WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
 * DISCLAIMED. IN NO EVENT SHALL <COPYRIGHT HOLDER> BE LIABLE FOR ANY
 * DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
 * (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
 * LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
 * ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
 * SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
*/
@SuppressWarnings({"all", "warnings", "unchecked"})
public class AslParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "ARGLIST", "ARMOR", "ASSIGN", "BEAT", "BECUADRO", "BEMOL", "BOOLEAN", "CHORUS", "COMBO", "COMMENT", "DEQUAL", "DIV", "DMINUS", "DO", "DPLUS", "ELSE", "EQUAL", "ESC_SEQ", "FA", "FALL", "FALSE", "FCONDS", "FLAUTA", "FOR", "FUNC", "FUNCALL", "GE", "GT", "GUITARRA", "HALF", "ID", "IF", "INT", "LA", "LE", "LIST_FUNCTIONS", "LIST_INSTR", "LNOTAS", "LT", "MEQUAL", "MI", "MINUS", "MOD", "MUL", "MULTINOTA", "NOT", "NOT_EQUAL", "NURAN", "OCT", "OR", "ORGANO", "PARAMS", "PARTITURA", "PEQUAL", "PERCUSION", "PIANO", "PLUS", "PREF", "PVALUE", "QUIET", "RAISE", "RE", "READ", "REPEAT", "REQUAL", "RETURN", "SAXO", "SHOT", "SI", "SOL", "SOSTENIDO", "SPEED", "STRING", "TRANSPORT", "TRI", "TROMPA", "TRUE", "TWICE", "VIOLA", "VOICE", "WHILE", "WRITE", "WS", "XILOFONO", "'&'", "'('", "')'", "','", "'.'", "':'", "':||'", "';'", "'['", "']'", "'b'", "'b*'", "'c'", "'c*'", "'f'", "'f*'", "'n'", "'n*'", "'r'", "'r*'", "'sc'", "'sc*'", "'sf'", "'sf*'", "'z||:'", "'{'", "'|'", "'}'", "'~'"
    };

    public static final int EOF=-1;
    public static final int T__89=89;
    public static final int T__90=90;
    public static final int T__91=91;
    public static final int T__92=92;
    public static final int T__93=93;
    public static final int T__94=94;
    public static final int T__95=95;
    public static final int T__96=96;
    public static final int T__97=97;
    public static final int T__98=98;
    public static final int T__99=99;
    public static final int T__100=100;
    public static final int T__101=101;
    public static final int T__102=102;
    public static final int T__103=103;
    public static final int T__104=104;
    public static final int T__105=105;
    public static final int T__106=106;
    public static final int T__107=107;
    public static final int T__108=108;
    public static final int T__109=109;
    public static final int T__110=110;
    public static final int T__111=111;
    public static final int T__112=112;
    public static final int T__113=113;
    public static final int T__114=114;
    public static final int T__115=115;
    public static final int T__116=116;
    public static final int T__117=117;
    public static final int AND=4;
    public static final int ARGLIST=5;
    public static final int ARMOR=6;
    public static final int ASSIGN=7;
    public static final int BEAT=8;
    public static final int BECUADRO=9;
    public static final int BEMOL=10;
    public static final int BOOLEAN=11;
    public static final int CHORUS=12;
    public static final int COMBO=13;
    public static final int COMMENT=14;
    public static final int DEQUAL=15;
    public static final int DIV=16;
    public static final int DMINUS=17;
    public static final int DO=18;
    public static final int DPLUS=19;
    public static final int ELSE=20;
    public static final int EQUAL=21;
    public static final int ESC_SEQ=22;
    public static final int FA=23;
    public static final int FALL=24;
    public static final int FALSE=25;
    public static final int FCONDS=26;
    public static final int FLAUTA=27;
    public static final int FOR=28;
    public static final int FUNC=29;
    public static final int FUNCALL=30;
    public static final int GE=31;
    public static final int GT=32;
    public static final int GUITARRA=33;
    public static final int HALF=34;
    public static final int ID=35;
    public static final int IF=36;
    public static final int INT=37;
    public static final int LA=38;
    public static final int LE=39;
    public static final int LIST_FUNCTIONS=40;
    public static final int LIST_INSTR=41;
    public static final int LNOTAS=42;
    public static final int LT=43;
    public static final int MEQUAL=44;
    public static final int MI=45;
    public static final int MINUS=46;
    public static final int MOD=47;
    public static final int MUL=48;
    public static final int MULTINOTA=49;
    public static final int NOT=50;
    public static final int NOT_EQUAL=51;
    public static final int NURAN=52;
    public static final int OCT=53;
    public static final int OR=54;
    public static final int ORGANO=55;
    public static final int PARAMS=56;
    public static final int PARTITURA=57;
    public static final int PEQUAL=58;
    public static final int PERCUSION=59;
    public static final int PIANO=60;
    public static final int PLUS=61;
    public static final int PREF=62;
    public static final int PVALUE=63;
    public static final int QUIET=64;
    public static final int RAISE=65;
    public static final int RE=66;
    public static final int READ=67;
    public static final int REPEAT=68;
    public static final int REQUAL=69;
    public static final int RETURN=70;
    public static final int SAXO=71;
    public static final int SHOT=72;
    public static final int SI=73;
    public static final int SOL=74;
    public static final int SOSTENIDO=75;
    public static final int SPEED=76;
    public static final int STRING=77;
    public static final int TRANSPORT=78;
    public static final int TRI=79;
    public static final int TROMPA=80;
    public static final int TRUE=81;
    public static final int TWICE=82;
    public static final int VIOLA=83;
    public static final int VOICE=84;
    public static final int WHILE=85;
    public static final int WRITE=86;
    public static final int WS=87;
    public static final int XILOFONO=88;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public AslParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public AslParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return AslParser.tokenNames; }
    public String getGrammarFileName() { return "/home2/users/alumnes/1182979/dades/musicote/CL-Musica-FIB-master/src/parser/Asl.g"; }


    public static class prog_return extends ParserRuleReturnScope {
        AslTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "prog"
    // /home2/users/alumnes/1182979/dades/musicote/CL-Musica-FIB-master/src/parser/Asl.g:68:1: prog : ( func )+ EOF -> ^( LIST_FUNCTIONS ( func )+ ) ;
    public final AslParser.prog_return prog() throws RecognitionException {
        AslParser.prog_return retval = new AslParser.prog_return();
        retval.start = input.LT(1);


        AslTree root_0 = null;

        Token EOF2=null;
        AslParser.func_return func1 =null;


        AslTree EOF2_tree=null;
        RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
        RewriteRuleSubtreeStream stream_func=new RewriteRuleSubtreeStream(adaptor,"rule func");
        try {
            // /home2/users/alumnes/1182979/dades/musicote/CL-Musica-FIB-master/src/parser/Asl.g:68:6: ( ( func )+ EOF -> ^( LIST_FUNCTIONS ( func )+ ) )
            // /home2/users/alumnes/1182979/dades/musicote/CL-Musica-FIB-master/src/parser/Asl.g:68:8: ( func )+ EOF
            {
            // /home2/users/alumnes/1182979/dades/musicote/CL-Musica-FIB-master/src/parser/Asl.g:68:8: ( func )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==FUNC) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /home2/users/alumnes/1182979/dades/musicote/CL-Musica-FIB-master/src/parser/Asl.g:68:8: func
            	    {
            	    pushFollow(FOLLOW_func_in_prog219);
            	    func1=func();

            	    state._fsp--;

            	    stream_func.add(func1.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_prog222);  
            stream_EOF.add(EOF2);


            // AST REWRITE
            // elements: func
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (AslTree)adaptor.nil();
            // 68:18: -> ^( LIST_FUNCTIONS ( func )+ )
            {
                // /home2/users/alumnes/1182979/dades/musicote/CL-Musica-FIB-master/src/parser/Asl.g:68:21: ^( LIST_FUNCTIONS ( func )+ )
                {
                AslTree root_1 = (AslTree)adaptor.nil();
                root_1 = (AslTree)adaptor.becomeRoot(
                (AslTree)adaptor.create(LIST_FUNCTIONS, "LIST_FUNCTIONS")
                , root_1);

                if ( !(stream_func.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_func.hasNext() ) {
                    adaptor.addChild(root_1, stream_func.nextTree());

                }
                stream_func.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (AslTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (AslTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "prog"


    public static class func_return extends ParserRuleReturnScope {
        AslTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "func"
    // /home2/users/alumnes/1182979/dades/musicote/CL-Musica-FIB-master/src/parser/Asl.g:72:1: func : FUNC ^ ID params '{' ! block_instructions '}' !;
    public final AslParser.func_return func() throws RecognitionException {
        AslParser.func_return retval = new AslParser.func_return();
        retval.start = input.LT(1);


        AslTree root_0 = null;

        Token FUNC3=null;
        Token ID4=null;
        Token char_literal6=null;
        Token char_literal8=null;
        AslParser.params_return params5 =null;

        AslParser.block_instructions_return block_instructions7 =null;


        AslTree FUNC3_tree=null;
        AslTree ID4_tree=null;
        AslTree char_literal6_tree=null;
        AslTree char_literal8_tree=null;

        try {
            // /home2/users/alumnes/1182979/dades/musicote/CL-Musica-FIB-master/src/parser/Asl.g:72:6: ( FUNC ^ ID params '{' ! block_instructions '}' !)
            // /home2/users/alumnes/1182979/dades/musicote/CL-Musica-FIB-master/src/parser/Asl.g:72:8: FUNC ^ ID params '{' ! block_instructions '}' !
            {
            root_0 = (AslTree)adaptor.nil();


            FUNC3=(Token)match(input,FUNC,FOLLOW_FUNC_in_func261); 
            FUNC3_tree = 
            (AslTree)adaptor.create(FUNC3)
            ;
            root_0 = (AslTree)adaptor.becomeRoot(FUNC3_tree, root_0);


            ID4=(Token)match(input,ID,FOLLOW_ID_in_func264); 
            ID4_tree = 
            (AslTree)adaptor.create(ID4)
            ;
            adaptor.addChild(root_0, ID4_tree);


            pushFollow(FOLLOW_params_in_func266);
            params5=params();

            state._fsp--;

            adaptor.addChild(root_0, params5.getTree());

            char_literal6=(Token)match(input,114,FOLLOW_114_in_func268); 

            pushFollow(FOLLOW_block_instructions_in_func271);
            block_instructions7=block_instructions();

            state._fsp--;

            adaptor.addChild(root_0, block_instructions7.getTree());

            char_literal8=(Token)match(input,116,FOLLOW_116_in_func273); 

            }

            retval.stop = input.LT(-1);


            retval.tree = (AslTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (AslTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "func"


    public static class params_return extends ParserRuleReturnScope {
        AslTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "params"
    // /home2/users/alumnes/1182979/dades/musicote/CL-Musica-FIB-master/src/parser/Asl.g:76:1: params : '(' ( paramlist )? ')' -> ^( PARAMS ( paramlist )? ) ;
    public final AslParser.params_return params() throws RecognitionException {
        AslParser.params_return retval = new AslParser.params_return();
        retval.start = input.LT(1);


        AslTree root_0 = null;

        Token char_literal9=null;
        Token char_literal11=null;
        AslParser.paramlist_return paramlist10 =null;


        AslTree char_literal9_tree=null;
        AslTree char_literal11_tree=null;
        RewriteRuleTokenStream stream_90=new RewriteRuleTokenStream(adaptor,"token 90");
        RewriteRuleTokenStream stream_91=new RewriteRuleTokenStream(adaptor,"token 91");
        RewriteRuleSubtreeStream stream_paramlist=new RewriteRuleSubtreeStream(adaptor,"rule paramlist");
        try {
            // /home2/users/alumnes/1182979/dades/musicote/CL-Musica-FIB-master/src/parser/Asl.g:76:8: ( '(' ( paramlist )? ')' -> ^( PARAMS ( paramlist )? ) )
            // /home2/users/alumnes/1182979/dades/musicote/CL-Musica-FIB-master/src/parser/Asl.g:76:10: '(' ( paramlist )? ')'
            {
            char_literal9=(Token)match(input,90,FOLLOW_90_in_params292);  
            stream_90.add(char_literal9);


            // /home2/users/alumnes/1182979/dades/musicote/CL-Musica-FIB-master/src/parser/Asl.g:76:14: ( paramlist )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==ID||LA2_0==89) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // /home2/users/alumnes/1182979/dades/musicote/CL-Musica-FIB-master/src/parser/Asl.g:76:14: paramlist
                    {
                    pushFollow(FOLLOW_paramlist_in_params294);
                    paramlist10=paramlist();

                    state._fsp--;

                    stream_paramlist.add(paramlist10.getTree());

                    }
                    break;

            }


            char_literal11=(Token)match(input,91,FOLLOW_91_in_params297);  
            stream_91.add(char_literal11);


            // AST REWRITE
            // elements: paramlist
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (AslTree)adaptor.nil();
            // 76:29: -> ^( PARAMS ( paramlist )? )
            {
                // /home2/users/alumnes/1182979/dades/musicote/CL-Musica-FIB-master/src/parser/Asl.g:76:32: ^( PARAMS ( paramlist )? )
                {
                AslTree root_1 = (AslTree)adaptor.nil();
                root_1 = (AslTree)adaptor.becomeRoot(
                (AslTree)adaptor.create(PARAMS, "PARAMS")
                , root_1);

                // /home2/users/alumnes/1182979/dades/musicote/CL-Musica-FIB-master/src/parser/Asl.g:76:41: ( paramlist )?
                if ( stream_paramlist.hasNext() ) {
                    adaptor.addChild(root_1, stream_paramlist.nextTree());

                }
                stream_paramlist.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (AslTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (AslTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "params"


    public static class paramlist_return extends ParserRuleReturnScope {
        AslTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "paramlist"
    // /home2/users/alumnes/1182979/dades/musicote/CL-Musica-FIB-master/src/parser/Asl.g:80:1: paramlist : param ( ',' ! param )* ;
    public final AslParser.paramlist_return paramlist() throws RecognitionException {
        AslParser.paramlist_return retval = new AslParser.paramlist_return();
        retval.start = input.LT(1);


        AslTree root_0 = null;

        Token char_literal13=null;
        AslParser.param_return param12 =null;

        AslParser.param_return param14 =null;


        AslTree char_literal13_tree=null;

        try {
            // /home2/users/alumnes/1182979/dades/musicote/CL-Musica-FIB-master/src/parser/Asl.g:80:10: ( param ( ',' ! param )* )
            // /home2/users/alumnes/1182979/dades/musicote/CL-Musica-FIB-master/src/parser/Asl.g:80:12: param ( ',' ! param )*
            {
            root_0 = (AslTree)adaptor.nil();


            pushFollow(FOLLOW_param_in_paramlist323);
            param12=param();

            state._fsp--;

            adaptor.addChild(root_0, param12.getTree());

            // /home2/users/alumnes/1182979/dades/musicote/CL-Musica-FIB-master/src/parser/Asl.g:80:18: ( ',' ! param )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==92) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // /home2/users/alumnes/1182979/dades/musicote/CL-Musica-FIB-master/src/parser/Asl.g:80:19: ',' ! param
            	    {
            	    char_literal13=(Token)match(input,92,FOLLOW_92_in_paramlist326); 

            	    pushFollow(FOLLOW_param_in_paramlist329);
            	    param14=param();

            	    state._fsp--;

            	    adaptor.addChild(root_0, param14.getTree());

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (AslTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (AslTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
